<resources>
    <string name="app_name">CodeIdea</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Username or email address</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_cancel_sign">Cancel</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_login2">Sign in</string>
    <string name="str_app_info_des">个人开源作品@JakePrim 版权所有 @2019</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_about">About</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="res_strings_night_model">夜间模式</string>
    <string name="res_strings_setting">设置</string>
    <string name="res_strings_close">退出</string>
    <string name="str_search">搜索</string>
    <string name="str_github_login_dec">请使用您的GitHub账号登录 了解详情</string>
    <string name="str_feeds">Feeds</string>
    <string name="str_repositories">Repositories</string>
    <string name="str_issues">Issues</string>
    <string name="str_pull_request">Pull Request</string>
    <string name="str_notification">Notification</string>
    <string name="str_pinned">Pinned</string>
    <string name="str_setting">Setting</string>
    <string name="str_trending">Trending</string>
    <string name="str_gists">Gists</string>
    <string name="str_codehub_for_github">CodeHub for GitHub</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>


    <string name="str_loading">正在加载中...</string>
    <string name="str_loaded">已加载全部</string>
    <string name="str_load_error">加载失败,点击重试</string>
    <string name="error_password">Password must contain at least 8 characters.</string>
</resources>
